--- a/_layouts/blogs.html
+++ b/_layouts/blogs.html
@@ -15,30 +15,9 @@
     {% seo %}
     <link href="/assets/v3/css/blog.css" type="text/css" rel="stylesheet">
 
-</head>
+    <link href="/assets/css/search.css" type="text/css" rel="stylesheet">
 
-<style>
-    .search-box-sticky{
-        width: 300px;
-    }
-    #hits {
-        position: absolute;
-        z-index: 1000;
-        display: none;
-        width: 90%;
-    }
-    .ais-hits--item {
-        background-color: #fff;
-        padding: 10px 5px;
-        border-radius: 5px;
-    }
-    .ais-hits--item:hover{
-        background-color: #eeeeee;
-    }
-    .ais-hits--item a{
-        text-decoration: none;
-    }
-</style>
+</head>
 
 <body>
     <div class="container-fluid container-shadow">
