--- a/_includes/kick_start.html
+++ b/_includes/kick_start.html
@@ -1,3 +1,38 @@
+<section class="supported_lang_block section_grey_bg pd_lg clearfix text-center" style="background-image: url({{ site.data.pages.kick_start.block_0.background_image }});
+            box-shadow:inset 0 0 0 10000px {{ site.data.pages.kick_start.block_0.color_overlay }}; 
+            background-position: center bottom; 
+            background-repeat: no-repeat; 
+            -moz-background-size: cover;
+            -o-background-size: cover; 
+            -webkit-background-size: cover; 
+            background-size: cover;
+            {% if site.data.pages.kick_start.block_0.visible == true %}
+            display: block; 
+            {% else %}
+            display: none;
+            {% endif %}">
+    <div class="container">
+        <div class="text_row">
+            <h3 class="heading">{{ site.data.pages.kick_start.block_0.title }}</h3>
+            <div class="desc">{{ site.data.pages.kick_start.block_0.text | markdownify}}</div>
+        </div>
+        <ul class="supported-languages-list clearfix" id="supported-langguages-list">
+            {% for item in site.data.pages.kick_start.block_0.items %}
+            <li>
+                <a href="{{item.link}}">
+                    <div class="flag-icon">
+                        <img class="flags" src='{{item.icon}}'>
+                    </div>
+                    <div class="flag-text">{{item.title}}</div>
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+        <a class="more_lang_btn" href="{{ site.data.pages.kick_start.block_0.button.link }}">
+            <span class="link_more">{{ site.data.pages.kick_start.block_0.button.title }}</span>
+        </a>
+    </div>
+</section>
 <section class="quick_start_block clearfix" style="background-image: url({{ site.data.pages.kick_start.block_1.background_image }});
             box-shadow:inset 0 0 0 10000px {{ site.data.pages.kick_start.block_1.color_overlay }}; 
             background-position: center bottom; 
