--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,182 +3,89 @@
     <div class="container">
         <div class="center-block clearfix">
             <div class="col blog_block">
-                <h4 class="title text-uppercase"><i class="fa fa-rss"></i>Mars Translation Blog</h4>
+                <h4 class="title text-uppercase"><i class="fa fa-rss"></i>JNDC Translation Blog</h4>
                 <ul class="footer_nav blog">
-                    <li class="nav_link"><a
-                            href="/blog/ten-most-successful-translation-services-companies-of-two-thousand-fifteen">10
-                            Most Successful Translation Services Companies [2019]</a>
+                    {% for post in site.posts limit:4 %}
+                    <li class="nav_link"><a href="{{ post.url }}">{{ post.title }}</a>
                     </li>
-                    <li class="nav_link"><a href="/blog/spanish-speaking-countries-in-europe">Spanish
-                            Speaking Countries in Europe</a>
-                    </li>
-                    <li class="nav_link"><a href="/blog/spanish-speaking-countries-in-south-america">Spanish
-                            Speaking Countries in South America</a>
-                    </li>
-                    <li class="nav_link"><a href="/blog/10-most-spoken-languages-in-africa">10 Most
-                            Spoken
-                            Languages in Africa</a>
-                    </li>
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col">
                 <h4 class="title text-uppercase">
-                    What We Do
+                    {{ site.data.footer.block_1.title }}
                 </h4>
                 <ul class="footer_nav">
+                    {% for item in site.data.footer.block_1.items %}
                     <li class="nav_link">
-                        <a href="/services/document-translation-services">
-                            Document Translation
+                        <a href="{{item.link}}">
+                            {{ item.title }}
                         </a>
                     </li>
-                    <li class="nav_link">
-                        <a href="/services/ecommerce-translation-services">
-                            E-Commerce Translation
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/services/website-translation-services">
-                            Website Translation
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/services/video-translation-services">
-                            Video Translation
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/services/elearning-translation-services">
-                            E-Learning Translation
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/services/dtp-file-conversion-services">
-                            DTP &amp; File Conversion
-                        </a>
-                    </li>
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col">
                 <h4 class="title text-uppercase">
-                    Resources
+                    {{ site.data.footer.block_2.title }}
                 </h4>
                 <ul class="footer_nav">
+                    {% for item in site.data.footer.block_2.items %}
                     <li class="nav_link">
-                        <a href="/case-studies">
-                            Case Studies
+                        <a href="{{item.link}}">
+                            {{ item.title }}
                         </a>
                     </li>
-                    <li class="nav_link">
-                        <a href="/white-papers">
-                            White Papers
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/magento-integration">
-                            Integrations
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/page/affiliate">
-                            Affiliates
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/page/api">
-                            API
-                        </a>
-                    </li>
-
-
-
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col">
                 <h4 class="title text-uppercase">
-                    FREE TOOLS
+                    {{ site.data.footer.block_3.title }}
                 </h4>
                 <ul class="footer_nav">
+                    {% for item in site.data.footer.block_3.items %}
                     <li class="nav_link">
-                        <a href="/freeTranslation">
-                            Free Translation
+                        <a href="{{item.link}}">
+                            {{ item.title }}
                         </a>
                     </li>
-                    <li class="nav_link">
-                        <a href="http://align.marstranslation.com/">
-                            Alignment tool
-                        </a>
-                    </li>
-                    <li class="nav_link">
-                        <a href="/convert/autocad">
-                            AutoCad Conversion
-                        </a>
-                    </li>
-
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col social">
                 <h4 class="title text-uppercase">
-                    Support
+                    {{ site.data.footer.block_4.title }}
                 </h4>
                 <ul class="footer_nav">
+                    {% for item in site.data.footer.block_4.items %}
                     <li class="nav_link">
-                        <a href="/list/customer-support">
-                            Customer Support
+                        <a href="{{item.link}}">
+                            {{ item.title }}
                         </a>
                     </li>
-                    <li class="nav_link">
-                        <a href="/list/translator-support">
-                            Translator Support
-                        </a>
-                    </li>
+                    {% endfor %}
                 </ul>
-                <div class="clearfix">
-                    <a class="btn btn_maroon btn_sm" href="/page/join-us">Join as
-                        Translator</a>
-                </div>
                 <ul class="social_media footer">
-                    <li><a href="https://www.facebook.com/marstranslation?ref=hl" target="_blank"><i
-                                class="icon facebook">
-                                &nbsp;</i></a></li>
-                    <li><a href="https://twitter.com/MarsTranslation" target="_blank"><i
-                                class="icon twitter">&nbsp;</i></a>
+                    {% for item in site.data.footer.block_4.socials %}
+                    <li>
+                        <a href="{{item.link}}" target="_blank">
+                            <i class="icon {{item.icon}}">&nbsp;</i>
+                        </a>
                     </li>
-                    <li><a href="https://plus.google.com/u/0/+MarsTranslationllc" target="_blank"><i
-                                class="icon google_plus">&nbsp;</i></a></li>
-                    <li><a href="https://www.linkedin.com/company/mars-translation" target="_blank"><i
-                                class="icon linkedin">&nbsp;</i></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCPhuT1bUQ9EUwk-gICL20Gw/videos" target="_blank"><i
-                                class="icon youtube">&nbsp;</i></a></li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
-        <div class="text-center certifications clearfix">
-            <ul class="certificates">
-                <li><a class="logo ukas no_event" href="javascript:void(0);">&nbsp;</a></li>
-                <li><a class="logo iso"
-                        href="https://www.marstranslation.com/downloads/iso-certificate-en.pdf">&nbsp;</a>
-                </li>
-                <li><a class="logo ata"
-                        href="https://www.marstranslation.com/downloads/ata-certificate.pdf">&nbsp;</a>
-                </li>
-                <li><a class="logo tac" href="https://www.marstranslation.com/downloads/tac.pdf">&nbsp;</a>
-                </li>
-                <li><a class="logo gala" href="/downloads/MarsTranslation_GALACertificate2017.pdf">&nbsp;</a>
-                </li>
-                <li><a class="logo comodo no_event" href="javascript:void(0);">&nbsp;</a></li>
-                <li><a class="logo gdpr no_event" href="javascript:void(0);">&nbsp;</a></li>
-            </ul>
-        </div>
         <div class="col-xs-12">
             <div class="info_text text-center">
-                <p>Mars Translation is a 24/7 language service platform by CCJK Technologies. We Provide
-                    competitive prices and have native translators from around the globe.</p>
+                <p>{{site.data.footer.block_5.title}}</p>
                 <ul class="footer_nav essential_links list-inline">
-                    <li class="nav_link"><a href="/page/terms-of-use">Terms of Use</a>
+                    <li class="nav_link"><a href="{{site.data.footer.block_5.term_link}}">Terms of Use</a>
                     </li>
-                    <li class="nav_link"><a href="/page/privacy">Privacy
+                    <li class="nav_link"><a href="{{site.data.footer.block_5.policy_link}}">Privacy
                             Policy</a></li>
-                    <li class="nav_link"><a href="/contact">Contact Us</a>
+                    <li class="nav_link"><a href="{{site.data.footer.block_5.contact_link}}">Contact Us</a>
                     </li>
                 </ul>
             </div>
