change image to name

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
                     {% for item in site.data.footer.block_4.socials %}
                     <li>
                         <a href="{{item.link}}" target="_blank">
-                            <i class="icon {{item.icon}}">&nbsp;</i>
+                            <i class="icon {{item.name}}">&nbsp;</i>
                         </a>
                     </li>
                     {% endfor %}
