--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 
     {% feed_meta %}
 
+    <link rel="icon" type="image/x-icon" href="/assets/images/ui/logo.ico" sizes="32x32"/>
     <link rel="icon" type="image/x-icon" href="/assets/images/ui/logo.ico" />
     <link href="/assets/css/app.css" type="text/css" rel="stylesheet" />
     
