--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,8 @@
 
     {% feed_meta %}
 
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico"/>
+    <link rel="icon" type="image/x-icon" href="/assets/images/ui/logo.ico" sizes="32x32"/>
+    <link rel="icon" type="image/x-icon" href="/assets/images/ui/logo.ico" />
     <link href="/assets/css/app_homepage.css" type="text/css" rel="stylesheet" />
 
     <script src="/assets/js/app_header.js"></script>
