--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="center-block clearfix">
             <div class="col blog_block">
-                <h4 class="title text-uppercase"><i class="fa fa-rss"></i>JNDC Translation Blog</h4>
+                <h4 class="title text-uppercase">{{ site.data.footer.block_0.title }}</h4>
                 <ul class="footer_nav blog">
                     {% for post in site.posts limit:4 %}
                     <li class="nav_link"><a href="{{ post.url }}">{{ post.title }}</a>
